Archive2/74/06de6478d3cc1a/output
main.cpp: In member function 'void bar::child<T>::func()':
main.cpp:20:17: error: there are no arguments to 'add' that depend on a template parameter, so a declaration of 'add' must be available [-fpermissive]
             add();
                 ^
main.cpp:20:17: note: (if you use '-fpermissive', G++ will accept your code, but allowing the use of an undeclared name is deprecated)
main.cpp: In instantiation of 'void bar::child<T>::func() [with T = foo::base]':
main.cpp:28:34:   required from here
main.cpp:20:16: error: 'add' was not declared in this scope
             add();
                ^
main.cpp:20:16: note: suggested alternative:
main.cpp:8:10: note:   'foo::add'
     void add(){}
          ^
